# ADLER

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: wheels.yml
ADLER/: ADLERGUI.py  ADLERcalc.py  BeamlineTab.py  CompareRixsTab.py  CorrectionsTab.py  DataHandling.py  ExperimentTree.py  ExtendGUI.py  FileFinder.py  FittingTab.py  LogviewerTab.py  NewSingleTab.py  PEAXIS.py  PostprocessingTab.py  VariablesGUI.py  XASplottingTab.py
src/: ADLER.spec  ADLERGUI.py  ADLERGUI.spec  ADLERcalc.py  BeamlineTab.py  CompareRixsTab.py  CorrectionsTab.py  DataHandling.py  ExperimentTree.py  ExtendGUI.py  FileFinder.py  FittingTab.py  FluxCorrectionHarm1.txt  FluxCorrectionHarm3.txt  LogviewerTab.py  NewSingleTab.py  PEAXIS.py  PostprocessingTab.py  SingleTab.py  VariablesGUI.py  XASplottingTab.py  __init__.py  geom_tools.py  old.spec  summary.txt
src/ADLER/: ADLERGUI.py  BeamlineTab.py  CompareRixsTab.py  CorrectionsTab.py  ExperimentTree.py  ExtendGUI.py  FileFinder.py  FittingTab.py  LogviewerTab.py  NewSingleTab.py  PEAXIS.py  PostprocessingTab.py  VariablesGUI.py  XASplottingTab.py  __init__.py
src/ADLERcalc/: AdlerCore.py  DataHandling.py  FitCore.py  RixsMeasurement.py  SimpleCore.py  XasCore.py  XasCorrector.py  arrayUtils.py  fitUtils.py  imageUtils.py  ioUtils.py  qtObjects.py  spectrumUtils.py  xasUtils.py
src/ADLERdata/: AdlerData.py
src/ADLERplot/: Plotter.py
tests/: test_adler_data.py  test_data_entry.py  test_data_group.py  test_rixs_measurement.py  test_yaml_conversion.py
(+20 files in other folders)
